<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <!-- user selects distance of performed race-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <lcl47489.bloomu.edu.raceprophet.DistanceSelector
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/performedDistanceSelector"
            custom:distanceLabelText = "@string/performed_distance_label"/>



    </LinearLayout>

    <!-- user selects time of performed race-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp">

        <lcl47489.bloomu.edu.raceprophet.TimeSelector
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            custom:timeLabelText="Time"/>


    </LinearLayout>

    <!-- user selects distance of target race-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <lcl47489.bloomu.edu.raceprophet.DistanceSelector
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/targetDistanceSelector"
            custom:distanceLabelText = "@string/target_distance_label"/>

    </LinearLayout>


    <!-- button and label for calculating prediction-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            android:onClick="predict"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textStyle="bold"
            android:textSize="@dimen/prediction_text_size"
            android:id="@+id/predictionTextView"
            android:text="@string/default_prediction"/>

    </LinearLayout>

</LinearLayout>
